--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@ footer {
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 400px;
+  width: 550px;
 
   /* https://developer.mozilla.org/ru/docs/Web/CSS/transform */
   
-  transform: scale(1.2, 1.2);
+  transform: scale(1, 1.2);
 }
 
 .box-1, .box-2, .box-3 {
@@ -92,6 +92,7 @@ footer {
   color: white;
   font-size: 15px;
   font-weight: 400;
+  width: 100%;
 }
 
 .box-2 h2 {
@@ -99,6 +100,7 @@ footer {
   font-size: 20px;
   font-weight: 700;
   margin-top: 0rem;
+  width: 100%;
 }
 
 /* The expected color for span of the second box is not present in the style-guide. Thus we try out different shades of light gray unless the desired shade is found */
@@ -118,6 +120,7 @@ footer {
   font-size: 10px;
   font-weight: 400;
   margin-top: -2rem;
+  width: 100%;
 }
 
 button {
@@ -129,6 +132,8 @@ button {
   padding: 5px;
   font-weight: 400;
   cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0px 1px 5px hsl(215, 13%, 43%);
 }
 
 button:hover {
@@ -139,7 +144,7 @@ button:hover {
 /* The expected color of the third box is not present in the style-guide. Thus we try out different shades of light cyan unless the desired shade is found */
 
 .box-3 {
-  background-color: hsl(176, 43%, 62%);
+  background-color: hsl(178, 47%, 54%);
   border-radius: 0px 0px 10px 0px;
   padding-bottom: 10px;
 }
@@ -154,7 +159,7 @@ button:hover {
 .box-3 h2 {
   color: hsl(204, 43%, 93%);
   font-size: 10px;
-  font-weight: 400;
+  font-weight: 100;
 }
 
 br {
@@ -163,7 +168,7 @@ br {
 
 @media only screen and (max-width: 600px) {
   .container {
-    width: 200px;
+    width: 300px;
     display: flex;
     direction: column;
     /* https://stackoverflow.com/questions/38133315/flex-direction-column-property-is-not-working */
