height proportion desktop

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ footer {
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   width: 550px;
 
   /* https://developer.mozilla.org/ru/docs/Web/CSS/transform */
